--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
   "name": "json-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "json-server db.json --port 3030"
+    "start": "npx json-server db.json -- host 0.0.0.0 --port $PORT"
   },
   "keywords": [],
   "author": "",
