--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-backend",
+  "name": "my-empcrud-app",
   "version": "1.0.0",
   "scripts": {
     "start": "npx json-server db.json --host 0.0.0.0 --port $PORT"
