--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-empcrud-app",
   "version": "1.0.0",
   "scripts": {
-    "start": "npx json-server db.json --host 0.0.0.0 --port $PORT"
+    "start": "json-server --watch db.json --port 10000"
   },
   "dependencies": {
     "json-server": "^0.17.3"
